k8s/mereb-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mereb-backend
spec:
  selector:
    app: mereb-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
